@@ -46,6 +46,6 @@ regular style
 <comment-keyword>/*</comment-keyword><comment> comment </comment><comment-keyword>/*</comment-keyword><comment> comment </comment><comment-keyword>*/</comment-keyword><comment> comment </comment><comment-keyword>*/</comment-keyword> regular
 <comment-keyword>/*</comment-keyword><comment-keyword>/*</comment-keyword><comment> comment </comment><comment-keyword>/*</comment-keyword><comment> comment </comment><comment-keyword>*/</comment-keyword><comment> comment </comment><comment-keyword>*/</comment-keyword><comment-keyword>*/</comment-keyword> regular
 
-<misc>{</misc><misc> </misc><keyword>foo</keyword><misc> </misc><misc>{</misc><misc> </misc><keyword>foo</keyword><misc> </misc><number>(</number><number> </number><string>bar/<string><number> </number><number>(</number><number> foo </number><string>bar/<string><number> </number><number>)</number><number> </number><string>bar/<string><number> </number><number>)</number><misc> bar </misc><misc>}</misc><misc> </misc><keyword>foo</keyword><misc> </misc><misc>}</misc> regular
+<misc>{</misc><misc> </misc><keyword>foo</keyword><misc> </misc><misc>{</misc><misc> </misc><keyword>foo</keyword><misc> </misc><number>(</number><number> </number><string>bar</string><number> </number><number>(</number><number> foo </number><string>bar</string><number> </number><number>)</number><number> </number><string>bar</string><number> </number><number>)</number><misc> bar </misc><misc>}</misc><misc> </misc><keyword>foo</keyword><misc> </misc><misc>}</misc> regular
 <comment-keyword>/*</comment-keyword><comment> comment </comment><comment-keyword>/*</comment-keyword><comment> comment </comment><comment-keyword>*/</comment-keyword><comment> comment </comment><comment-keyword>*/</comment-keyword> regular
 ==
